--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 workspace = { members = ["cli"] }
+
 [package]
 name = "assetchunk"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 name = "assetchunk"
-crate-type = ["cdylib"]
-
+crate-type = ["cdylib", "lib"]
 
 [dependencies]
 serde = { version = "1.0.193", features = ["derive"] }
