--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ crate-type = ["cdylib", "lib"]
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 toml = "0.8.8"
+file-format = "0.22.0"
