--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 assetchunk = {path = "../"}
+crossterm = "0.27.0"
+scopeguard = "1.1.0"
 clap = { version = "4.4.8", features = ["derive"] }
 
